# daemon

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCKER.md  Dockerfile  GLOBAL-DEPLOYMENT.md  JOINING.md  LICENSE  README-PRODUCTION.md  README.md  REPOSITORY.md  RUST_IMPLEMENTATION_GUIDE.md  SIMPLE-SETUP.md  TESTING-GUIDE.md  auto-update.sh  bootstrap-registry.json  deploy-vx0-global.sh  docker-compose.yml  install-vx0.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: backbone-node.toml  edge-node.toml  regional-node.toml  vx0net-node1.toml  vx0net-node2.toml
deploy/: backbone1.toml  edge1.toml  generate_certs.sh  install.sh  regional1.toml  test_network.sh
desktop-installer/: vx0-desktop-installer.py
k8s/: deploy-global.sh
k8s/backbone/: backbone-configmap.yaml  backbone-deployment.yaml  backbone-service.yaml
k8s/discovery/: discovery-service.yaml
monitoring/: prometheus.yml
scripts/: docker-deploy.sh  join-network.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/network/: mod.rs
src/network/bgp/: messages.rs  mod.rs  protocol.rs  routing.rs  session.rs
src/network/dns/: mod.rs  resolver.rs  server.rs
src/network/ike/: crypto.rs  mod.rs  session.rs  tunnels.rs
src/node/: bootstrap.rs  discovery.rs  joining.rs  manager.rs  mod.rs  peer.rs
vps-deploy/: setup-vps.sh
vultr-deploy/: README.md  deploy-vultr.sh  deploy.sh  setup.sh  vultr-config.env
web-installer/: index.html
